[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ashoka-chatbot"
version = "0.1.0"
dependencies = [
    "Flask==2.3.3",
    "Flask-Cors==4.0.0",
    "sentence-transformers==3.1.1",
    "faiss-cpu==1.9.0",        # ← UPDATED TO 1.9.0 (supports Python 3.12)
    "openai==1.51.0",
    "gunicorn==21.2.0",
    "numpy==1.26.4",
    "torch==2.4.0"
]

[tool.setuptools.packages.find]
where = ["."]